Pulled main again for fixed category endpoints, fixed endpoint access issues